# meta

./: .gitignore  .gitkbignore  .meta.yaml  .rgignore  .rvwalk.py  AGENTS.md  ARCHITECTURE-TRUTH.md  CHANGELOG.md  CLAUDE.md  COGNITUM-SEED.md  CONTRIBUTING.md  Cargo.toml  DARK-FACTORY-RESEARCH.md  GAP-REGISTER.md  HARNESS-UPGRADE-KIT.md  META-BACKUP-POLICY.md  META-ORG-AUDIT.md  META-ORG-POLICY.md  MIROFISH-PORT-PLAN.md  Makefile  NEEDS-HUMAN.md  NORTH-STAR.md  PORTABILITY-AUDIT.md  PORTABILITY-SESSION-PROMPT.md  README.md  RUVECTOR-CRATE-LEDGER.md  RUVECTOR-META-MAPPING-S1.md  RUVECTOR-RESEARCH.md  RUVECTOR-RUNBOOK.md  SESSION-HANDOFF.md  STACK-INTEGRATION-PLANS.md  UPGRADE-MISSION-PROMPT.md  VERIFICATION-REPORT.md  VERIFY-SESSION-PROMPT.md  agent-env.yaml  install.ps1  install.sh  local_dirs.txt  meta_projects.txt
.agent/: skills-catalog.md
.agents/: README.md
.cargo/: config.toml
.claude/: agent-guard.toml  settings.json  statusline-command.sh
.codex/: config.toml  hooks.json
.context/: CONTEXT.md  VISION_PLAN.md
.cursor/: mcp.json
.githooks/: pre-push
.handoff/: census-workspace-arch.json  census-workspace-arch.md  ledger.events.jsonl
.kb/: .gitignore  AGENTS.md  config.toml
agent-env/: README.md
claude-plugin/: .mcp.json
copilot-plugin/: README.md  meta-copilot
docs/: ROADMAP.md  advanced_usage.md  agent-skills-catalog-source.md  agent_plugin_control_plane.md  agent_workflows.md  architecture_overview.md  claude_code_skills.md  contributing.md  faq_troubleshooting.md  flexnetos-root-authority.md  flexnetos-system-architecture.md  hook-audit-local-first-ci.md  lifeos-agentic-os-architecture.md  lifeos-install-update-rollback-contract.md  lifeos-portable-release-roadmap.md  lifeos-release-acceptance-gates.md  local-first-ci.md  (+7 more)
(+784 files in other folders)
