[workspace]
members = [
    "loop_cli",
    "loop_lib",
    "meta_cli",
    "meta_core",
    "meta_git_cli",
    "meta_git_lib",
    "meta_mcp",
    "meta_plugin_protocol",
    "meta_plugin_api",
    "meta_rust_cli",
    "meta_project_cli",
    "rtk-tokenkill",
    "teri",
    "shimmy",
]
exclude = [
    "agent",
    "envctl",
    "grit",
    "lane",
    "RuVector",
    "icm",
    "weave",
    "prompt_hub",
    "atc",
    "oh-my-pi",
    "ruflo",
    "Archon",
    "hermes-agent",
    "codex",
    "ECC",
    "n8n",
    "obsidian-mind",
    "lifeos",
]
resolver = "2"

[workspace.package]
version = "0.2.22"
edition = "2021"
license = "MIT"
repository = "https://github.com/FlexNetOS/meta"
