[workspace]
members = [
    "loop_cli",
    "loop_lib",
    "meta_cli",
    "meta_core",
    "meta_git_cli",
    "meta_git_lib",
    "meta_mcp",
    "meta_plugin_protocol",
    "meta_plugin_api",
    "meta_rust_cli",
    "meta_project_cli",
    "rtk-tokenkill",
    "shimmy",
]
exclude = [
    "kasetto",
    "agent",
    "envctl",
    "grit",
    "lane",
    "meta-ruvector",
    # teri is its own multi-crate workspace (agent/api/graph/memory/... grew during
    # the MiroFish->teri port); it cannot also be a member of the outer meta
    # workspace ("multiple workspace roots" error). Build it via its own workspace.
    "teri",
    "icm",
    "weave",
    "prompt_hub",
    "atc",
    "oh-my-pi",
    "ruflo",
    "Archon",
    "hermes-agent",
    "codex",
    "ECC",
    "n8n",
    "obsidian-mind",
    "lifeos",
]
resolver = "2"

[workspace.package]
version = "0.2.25"
edition = "2021"
license = "MIT"
repository = "https://github.com/FlexNetOS/meta"
